# UselessJSON

./: CMakeLists.txt  README.md
example.gm82/scripts/: example.gml
example.gm82/settings/: extensions.txt
src/: CMakeLists.txt  UselessJSON.gej  api.cpp  api.gml
